ci: support CO_REPO and CO_BRANCH and add assert (#32)
Signed-off-by: hexuejin <hexuejin.hxj@antgroup.com>

--- a/.github/actions/get-bundles/action.yml
+++ b/.github/actions/get-bundles/action.yml
@@ -88,11 +88,11 @@ runs:
           tar -xf bundles/tests-${{ inputs.platform }}${{ inputs.debug-suffix }}.tar.gz -C bundles/tests
         fi
 
-        if [[ -e bundles/install_llvm.tar.gz ]]; then
+        if [[ -e bundles/install_llvm${{ inputs.debug-suffix }}.tar.gz ]]; then
           echo 'Unpacking llvm bundle...'
           # the export directory must be the same as original install dir of llvm.
-          tar -xf bundles/install_llvm.tar.gz -C $GITHUB_WORKSPACE
-          ls -R $GITHUB_WORKSPACE/install_llvm
+          tar -xf bundles/install_llvm${{ inputs.debug-suffix }}.tar.gz -C $GITHUB_WORKSPACE
+          ls -R $GITHUB_WORKSPACE/install_llvm${{ inputs.debug-suffix }}
         fi
       shell: bash
 
